# daylog

./: .gitignore  CHANGELOG.md  CLAUDE.md  REPO-STRATEGY.md  SECURITY-AUDIT.md  docker-compose.yml  justfile
backend/: .env.example  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3e2da3791ecc_add_item_description.py  5cced2756000_add_origin_id_to_todo_item.py  d2b2c62b0590_initial_schema.py  e44cbf448a62_add_auth_tables_and_workspace_user_id.py
backend/daylog/: auth.py  config.py  db.py  dependencies.py  main.py  models.py  rollover.py  schemas.py
backend/daylog/router/: auth.py  days.py  items.py  rollover.py  workspaces.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/day/: DayNavigator.tsx  DayView.tsx
frontend/src/components/items/: ItemCreateInput.tsx  ItemList.tsx  ItemRow.tsx
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/src/components/story/: StoryEditor.tsx
frontend/src/components/workspace/: WorkspaceCreateDialog.tsx  WorkspaceList.tsx  WorkspaceSettingsDialog.tsx
frontend/src/hooks/: use-auth.ts  use-carry.ts  use-day-entry.ts  use-items.ts  use-theme.ts  use-workspaces.ts
frontend/src/lib/: api.ts  query-keys.ts
frontend/src/pages/: DayPage.tsx  HomePage.tsx  LoginPage.tsx  WorkspacePage.tsx
frontend/src/types/: api.ts
