[project]
name = "daylog"
version = "0.1.0"
description = "A scoped daily todo system with rollover"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.15",
    "apscheduler>=3.10",
    "pydantic-settings>=2.0",
    "bcrypt>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
